# javsvm

./: CMakeLists.txt  README.md  invoke.cpp  main.cpp  runtime.cpp
class/: CMakeLists.txt  jclass_attribute.cpp  jclass_attribute.h  jclass_attribute_gen.h  jclass_const.cpp  jclass_const.h  jclass_const_gen.h  jclass_field.h  jclass_file.cpp  jclass_file.h  jclass_header.h  jclass_interface.h  jclass_method.h
classloader/: CMakeLists.txt  bootstrap_loader.cpp  bootstrap_loader.h
concurrent/: CMakeLists.txt  atomic_lock.cpp  atomic_lock.h  concurrent_map.h  concurrent_set.h  object_pool.h  pool.h  recursive_lock.cpp  recursive_lock.h
dll/: .gitignore  CMakeLists.txt  dll_loader.cpp  dll_loader.h  dll_wrapper.cpp  dll_wrapper.h
engine/: CMakeLists.txt  arm64.asm  engine.cpp  engine.h  jnilib.h  opsdef.h  opslib.h  run_java.cpp  run_jni.cpp  runner.cpp  throw.cpp
gc/: CMakeLists.txt  gc_root.cpp  gc_root.h  gc_thread.cpp  gc_thread.h  safety_point.cpp  safety_point.h
io/: input_stream.h  output_stream.h
jdk/: Main.baklass
jdk/java/lang/: Class.java  Object.java
jdk/java/lang/reflect/: AnnotatedElement.java
jni/: CMakeLists.txt  JNIEnv.cpp  JavaVM.cpp  access_array.cpp  access_array.h  access_array_gen.h  access_field.cpp  access_field.h  access_field_gen.h  call_method.cpp  call_method.h  call_method_gen.h  java_vm.cpp  java_vm.h  jni.cpp  jni.h  jni_env.cpp  jni_env.h  jni_md.h  jni_utils.h  nio.cpp  nio.h  reference.cpp  reference.h  reflection.cpp  reflection.h  string_utf.cpp  string_utf.h
jre/: CMakeLists.txt  JavacLists.txt  Main.java  autogen.sh  native.cpp  native.h
jre/java/io/: BufferedWriter.java  FileDescriptor.cpp  FileDescriptor.java  FileInputStream.cpp  FileInputStream.java  FileOutputStream.cpp  FileOutputStream.java  ObjectStreamField.java
jre/java/lang/: Class.cpp  Class.java  Float.cpp  Object.cpp  Object.java  String.cpp  String.java  System.cpp  System.java  Thread.cpp  Thread.java  ThreadGroup.java
jre/java/nio/: Buffer.java  ByteBuffer.java  ByteOrder.java  CharBuffer.java  HeapByteBuffer.java  HeapCharBuffer.java
jre/java/nio/charset/: Charset.java
jre/java/util/: Arrays.java  Hashtable.java  Properties.java
jre/sun/misc/: VM.java
jre/sun/nio/cs/: UTF_8.java
jre/sun/reflect/: CallerSensitive.java  Reflection.cpp  Reflection.java
jre/sun/reflect/misc/: ReflectUtil.java
object/: CMakeLists.txt  jarray.cpp  jarray.h  jclass.cpp  jclass.h  jfield.cpp  jfield.h  jlock.cpp  jlock.h  jmethod.cpp  jmethod.h  jobject.cpp  jobject.h  jstring.cpp  jstring.h  jthrowable.h
test/: CMakeLists.txt  Main.baklass  app-debug.apk  main.cpp
test/class/: CMakeLists.txt  context.cpp  javah.cpp  javah.h
test/concurrent/: CMakeLists.txt  concurrent_map.cpp  concurrent_set.cpp  pool.cpp  recursive_lock.cpp
test/engine/: CMakeLists.txt  Native.cpp  Native.h  Native.java  arm64.cpp  engine.cpp  jnilib.cpp  run_java.cpp  run_jni.cpp
test/object/: CMakeLists.txt  jobject.cpp
test/utils/: CMakeLists.txt  utils.cpp
utils/: CMakeLists.txt  array_utils.h  arrays.h  file_utils.h  files.h  global.h  log.h  new  number_utils.h  numbers.h  string_utils.h  strings.h  type_utils.h  utils.cpp
vm/: CMakeLists.txt  jenv.cpp  jenv.h  jheap.cpp  jheap.h  jmethod_area.cpp  jmethod_area.h  jstack.cpp  jstack.h  jvm.cpp  jvm.h
zip/: Makefile  zip_entry.cpp  zip_entry.h  zip_eocd.h  zip_file.cpp  zip_file.h  zip_utils.cpp  zip_utils.h
